--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.0",
+    "connect-flash": "^0.1.1",
     "ejs": "*",
     "eventproxy": "^0.3.4",
     "express": "^4.13.4",
